--- a/addon/locale/ar/LC_MESSAGES/nvda.po
+++ b/addon/locale/ar/LC_MESSAGES/nvda.po
@@ -1,8 +1,113 @@
+# Translation file for MyCalculator NVDA Add-on.
+# Copyright (C) 2025 MyCalculator Project
+# This file is distributed under the same license as the MyCalculator package.
+# Andhi Mardianto <anditoinfo@gmail.com>, 2025.
+#
+msgid ""
+msgstr ""
+"Project-Id-Version: MyCalculator 1.0\n"
+"Report-Msgid-Bugs-To: anditoinfo@gmail.com\n"
+"POT-Creation-Date: 2025-01-02 10:01+0700\n"
+"PO-Revision-Date: 2025-01-02 10:30+0700\n"
+"Last-Translator: Andhi Mardianto <anditoinfo@gmail.com>\n"
+"Language-Team: Arabic <ar@li.org>\n"
+"Language: ar\n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Transfer-Encoding: 8bit\n"
+
+#: globalPlugins/myCalculator/help.py:6
+msgid "Calculation Mode Help"
+msgstr "مساعدة وضع الحساب"
+
+#: globalPlugins/myCalculator/help.py:16
+msgid ""
+"Standard Mode:\n"
+"Calculations follow the standard mathematical operator precedence rules "
+"(PEMDAS).\n"
+"Example: 3 + 5 * 2 = 13 (multiplication is performed first).\n"
+"\n"
+"Left to Right Mode:\n"
+"Calculations are performed from left to right without considering operator "
+"precedence.\n"
+"Example: 3 + 5 * 2 = 16 (calculations are done left to right)."
+msgstr ""
+"الوضع القياسي:\n"
+"تتبع العمليات قواعد أولوية المشغل الرياضي القياسية (PEMDAS).\n"
+"مثال: 3 + 5 * 2 = 13 (يتم تنفيذ الضرب أولاً).\n"
+"\n"
+"وضع من اليسار إلى اليمين:\n"
+"تتم العمليات من اليسار إلى اليمين دون مراعاة أولوية المشغل.\n"
+"مثال: 3 + 5 * 2 = 16 (تُنفذ العمليات من اليسار إلى اليمين)."
+
+#: globalPlugins/myCalculator/help.py:28
+msgid "OK"
+msgstr "موافق"
+
+#: globalPlugins/myCalculator/__init__.py:26
+msgid "Open My Calculator dialog"
+msgstr "افتح مربع حوار الآلة الحاسبة الخاصة بي"
+
+#: globalPlugins/myCalculator/__init__.py:27
+msgid "MyCalculator"
+msgstr "حاسبتي"
+
+#: globalPlugins/myCalculator/__init__.py:60
+msgid "Calculation Input"
+msgstr "مدخلات الحساب"
+
+#: globalPlugins/myCalculator/__init__.py:69
+msgid "Result"
+msgstr "النتيجة"
+
+#: globalPlugins/myCalculator/__init__.py:76
+msgid "Copy"
+msgstr "نسخ"
+
+#: globalPlugins/myCalculator/__init__.py:81
+msgid "Standar"
+msgstr "قياسي"
+
+#: globalPlugins/myCalculator/__init__.py:86
+msgid "Left to Right"
+msgstr "من اليسار إلى اليمين"
+
+#: globalPlugins/myCalculator/__init__.py:91
+msgid "Help"
+msgstr "مساعدة"
+
+#: globalPlugins/myCalculator/__init__.py:97
+msgid "History"
+msgstr "التاريخ"
+
+#: globalPlugins/myCalculator/__init__.py:198
+msgid "Invalid input, only numbers and arithmetic symbols allowed"
+msgstr "مدخلات غير صالحة، يُسمح فقط بالأرقام والرموز الحسابية"
+
+#: globalPlugins/myCalculator/__init__.py:160
+msgid "Calculation mode set to Standard International"
+msgstr "تم تعيين وضع الحساب إلى القياسي الدولي"
+
+#: globalPlugins/myCalculator/__init__.py:165
+msgid "Calculation mode set to Left to Right"
+msgstr "تم تعيين وضع الحساب إلى من اليسار إلى اليمين"
+
+#: globalPlugins/myCalculator/__init__.py:179
+msgid "Result copied to clipboard"
+msgstr "تم نسخ النتيجة إلى الحافظة"
+
+#: globalPlugins/myCalculator/__init__.py:181
+msgid "Failed to access clipboard"
+msgstr "فشل الوصول إلى الحافظة"
+
+#: globalPlugins/myCalculator/__init__.py:183
+msgid "No result to copy"
+msgstr "لا توجد نتيجة للنسخ"
+
+#: globalPlugins/myCalculator/__init__.py:213
 msgid "Invalid calculation mode"
 msgstr "وضع حساب غير صالح"
 
+#: globalPlugins/myCalculator/__init__.py:226
 msgid "Error! Check Input"
-msgstr "خطأ! تحقق من الإدخال"
-
-msgid "Standard Mode:\nCalculations follow the standard mathematical operator precedence rules (PEMDAS).\nExample: 3 + 5 * 2 = 13 (multiplication is performed first).\n\nLeft to Right Mode:\nCalculations are performed from left to right without considering operator precedence.\nExample: 3 + 5 * 2 = 16 (calculations are done left to right)."
-msgstr "وضع قياسي:\nتتبع العمليات الحسابية قواعد الأولوية القياسية للعمليات الرياضية (PEMDAS).\nمثال: 3 + 5 * 2 = 13 (يتم إجراء الضرب أولاً).\n\nوضع من اليسار إلى اليمين:\nتتم العمليات الحسابية من اليسار إلى اليمين دون النظر إلى أولوية العمليات.\nمثال: 3 + 5 * 2 = 16 (تتم الحسابات من اليسار إلى اليمين)."
+msgstr "خطأ! تحقق من المدخلات"
