--- a/addon/locale/hi/LC_MESSAGES/nvda.po
+++ b/addon/locale/hi/LC_MESSAGES/nvda.po
@@ -1,8 +1,113 @@
+# Translation file for MyCalculator NVDA Add-on.
+# Copyright (C) 2025 MyCalculator Project
+# This file is distributed under the same license as the MyCalculator package.
+# Andhi Mardianto <anditoinfo@gmail.com>, 2025.
+#
+msgid ""
+msgstr ""
+"Project-Id-Version: MyCalculator 1.0\n"
+"Report-Msgid-Bugs-To: anditoinfo@gmail.com\n"
+"POT-Creation-Date: 2025-01-02 10:01+0700\n"
+"PO-Revision-Date: 2025-01-02 10:30+0700\n"
+"Last-Translator: Andhi Mardianto <anditoinfo@gmail.com>\n"
+"Language-Team: Hindi <hi@li.org>\n"
+"Language: hi\n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Transfer-Encoding: 8bit\n"
+
+#: globalPlugins/myCalculator/help.py:6
+msgid "Calculation Mode Help"
+msgstr "गणना मोड सहायता"
+
+#: globalPlugins/myCalculator/help.py:16
+msgid ""
+"Standard Mode:\n"
+"Calculations follow the standard mathematical operator precedence rules "
+"(PEMDAS).\n"
+"Example: 3 + 5 * 2 = 13 (multiplication is performed first).\n"
+"\n"
+"Left to Right Mode:\n"
+"Calculations are performed from left to right without considering operator "
+"precedence.\n"
+"Example: 3 + 5 * 2 = 16 (calculations are done left to right)."
+msgstr ""
+"मानक मोड:\n"
+"गणनाएँ मानक गणितीय ऑपरेटर प्राथमिकता नियम (PEMDAS) का पालन करती हैं।\n"
+"उदाहरण: 3 + 5 * 2 = 13 (पहले गुणा किया जाता है)।\n"
+"\n"
+"बाएँ से दाएँ मोड:\n"
+"गणनाएँ बाएँ से दाएँ बिना ऑपरेटर प्राथमिकता को ध्यान में रखे की जाती हैं।\n"
+"उदाहरण: 3 + 5 * 2 = 16 (गणना बाएँ से दाएँ की जाती है)।"
+
+#: globalPlugins/myCalculator/help.py:28
+msgid "OK"
+msgstr "ठीक है"
+
+#: globalPlugins/myCalculator/__init__.py:26
+msgid "Open My Calculator dialog"
+msgstr "मेरे कैलकुलेटर संवाद को खोलें"
+
+#: globalPlugins/myCalculator/__init__.py:27
+msgid "MyCalculator"
+msgstr "मेरा कैलकुलेटर"
+
+#: globalPlugins/myCalculator/__init__.py:60
+msgid "Calculation Input"
+msgstr "गणना इनपुट"
+
+#: globalPlugins/myCalculator/__init__.py:69
+msgid "Result"
+msgstr "परिणाम"
+
+#: globalPlugins/myCalculator/__init__.py:76
+msgid "Copy"
+msgstr "प्रतिलिपि"
+
+#: globalPlugins/myCalculator/__init__.py:81
+msgid "Standar"
+msgstr "मानक"
+
+#: globalPlugins/myCalculator/__init__.py:86
+msgid "Left to Right"
+msgstr "बाएँ से दाएँ"
+
+#: globalPlugins/myCalculator/__init__.py:91
+msgid "Help"
+msgstr "सहायता"
+
+#: globalPlugins/myCalculator/__init__.py:97
+msgid "History"
+msgstr "इतिहास"
+
+#: globalPlugins/myCalculator/__init__.py:198
+msgid "Invalid input, only numbers and arithmetic symbols allowed"
+msgstr "अमान्य इनपुट, केवल संख्याएँ और अंकगणितीय प्रतीक की अनुमति है"
+
+#: globalPlugins/myCalculator/__init__.py:160
+msgid "Calculation mode set to Standard International"
+msgstr "गणना मोड को मानक अंतर्राष्ट्रीय पर सेट किया गया"
+
+#: globalPlugins/myCalculator/__init__.py:165
+msgid "Calculation mode set to Left to Right"
+msgstr "गणना मोड को बाएँ से दाएँ पर सेट किया गया"
+
+#: globalPlugins/myCalculator/__init__.py:179
+msgid "Result copied to clipboard"
+msgstr "परिणाम क्लिपबोर्ड पर प्रतिलिपित किया गया"
+
+#: globalPlugins/myCalculator/__init__.py:181
+msgid "Failed to access clipboard"
+msgstr "क्लिपबोर्ड तक पहुंचने में विफल"
+
+#: globalPlugins/myCalculator/__init__.py:183
+msgid "No result to copy"
+msgstr "प्रतिलिपि के लिए कोई परिणाम नहीं"
+
+#: globalPlugins/myCalculator/__init__.py:213
 msgid "Invalid calculation mode"
 msgstr "अमान्य गणना मोड"
 
+#: globalPlugins/myCalculator/__init__.py:226
 msgid "Error! Check Input"
 msgstr "त्रुटि! इनपुट जांचें"
-
-msgid "Standard Mode:\nCalculations follow the standard mathematical operator precedence rules (PEMDAS).\nExample: 3 + 5 * 2 = 13 (multiplication is performed first).\n\nLeft to Right Mode:\nCalculations are performed from left to right without considering operator precedence.\nExample: 3 + 5 * 2 = 16 (calculations are done left to right)."
-msgstr "मानक मोड:\nगणनाएँ मानक गणितीय ऑपरेटर प्राथमिकता नियमों (PEMDAS) का पालन करती हैं।\nउदाहरण: 3 + 5 * 2 = 13 (गुणन पहले किया जाता है)।\n\nबाएं से दाएं मोड:\nगणनाएँ ऑपरेटर प्राथमिकता की परवाह किए बिना बाएं से दाएं की जाती हैं।\nउदाहरण: 3 + 5 * 2 = 16 (गणना बाएं से दाएं की जाती है)।"
