--- a/addon/locale/zh/LC_MESSAGES/nvda.po
+++ b/addon/locale/zh/LC_MESSAGES/nvda.po
@@ -1,8 +1,113 @@
+# Translation file for MyCalculator NVDA Add-on.
+# Copyright (C) 2025 MyCalculator Project
+# This file is distributed under the same license as the MyCalculator package.
+# Andhi Mardianto <anditoinfo@gmail.com>, 2025.
+#
+msgid ""
+msgstr ""
+"Project-Id-Version: MyCalculator 1.0\n"
+"Report-Msgid-Bugs-To: anditoinfo@gmail.com\n"
+"POT-Creation-Date: 2025-01-02 10:01+0700\n"
+"PO-Revision-Date: 2025-01-02 10:30+0700\n"
+"Last-Translator: Andhi Mardianto <anditoinfo@gmail.com>\n"
+"Language-Team: Chinese <zh@li.org>\n"
+"Language: zh\n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Transfer-Encoding: 8bit\n"
+
+#: globalPlugins/myCalculator/help.py:6
+msgid "Calculation Mode Help"
+msgstr "计算模式帮助"
+
+#: globalPlugins/myCalculator/help.py:16
+msgid ""
+"Standard Mode:\n"
+"Calculations follow the standard mathematical operator precedence rules "
+"(PEMDAS).\n"
+"Example: 3 + 5 * 2 = 13 (multiplication is performed first).\n"
+"\n"
+"Left to Right Mode:\n"
+"Calculations are performed from left to right without considering operator "
+"precedence.\n"
+"Example: 3 + 5 * 2 = 16 (calculations are done left to right)."
+msgstr ""
+"标准模式:\n"
+"计算遵循标准数学运算符优先级规则 (PEMDAS)。\n"
+"示例: 3 + 5 * 2 = 13 (先进行乘法计算)。\n"
+"\n"
+"从左到右模式:\n"
+"计算从左到右进行，不考虑运算符优先级。\n"
+"示例: 3 + 5 * 2 = 16 (计算按从左到右的顺序完成)。"
+
+#: globalPlugins/myCalculator/help.py:28
+msgid "OK"
+msgstr "确定"
+
+#: globalPlugins/myCalculator/__init__.py:26
+msgid "Open My Calculator dialog"
+msgstr "打开我的计算器对话框"
+
+#: globalPlugins/myCalculator/__init__.py:27
+msgid "MyCalculator"
+msgstr "我的计算器"
+
+#: globalPlugins/myCalculator/__init__.py:60
+msgid "Calculation Input"
+msgstr "计算输入"
+
+#: globalPlugins/myCalculator/__init__.py:69
+msgid "Result"
+msgstr "结果"
+
+#: globalPlugins/myCalculator/__init__.py:76
+msgid "Copy"
+msgstr "复制"
+
+#: globalPlugins/myCalculator/__init__.py:81
+msgid "Standar"
+msgstr "标准"
+
+#: globalPlugins/myCalculator/__init__.py:86
+msgid "Left to Right"
+msgstr "从左到右"
+
+#: globalPlugins/myCalculator/__init__.py:91
+msgid "Help"
+msgstr "帮助"
+
+#: globalPlugins/myCalculator/__init__.py:97
+msgid "History"
+msgstr "历史记录"
+
+#: globalPlugins/myCalculator/__init__.py:198
+msgid "Invalid input, only numbers and arithmetic symbols allowed"
+msgstr "无效输入，仅允许数字和算术符号"
+
+#: globalPlugins/myCalculator/__init__.py:160
+msgid "Calculation mode set to Standard International"
+msgstr "计算模式设置为标准国际模式"
+
+#: globalPlugins/myCalculator/__init__.py:165
+msgid "Calculation mode set to Left to Right"
+msgstr "计算模式设置为从左到右"
+
+#: globalPlugins/myCalculator/__init__.py:179
+msgid "Result copied to clipboard"
+msgstr "结果已复制到剪贴板"
+
+#: globalPlugins/myCalculator/__init__.py:181
+msgid "Failed to access clipboard"
+msgstr "无法访问剪贴板"
+
+#: globalPlugins/myCalculator/__init__.py:183
+msgid "No result to copy"
+msgstr "没有结果可复制"
+
+#: globalPlugins/myCalculator/__init__.py:213
 msgid "Invalid calculation mode"
 msgstr "无效的计算模式"
 
+#: globalPlugins/myCalculator/__init__.py:226
 msgid "Error! Check Input"
-msgstr "错误！检查输入"
-
-msgid "Standard Mode:\nCalculations follow the standard mathematical operator precedence rules (PEMDAS).\nExample: 3 + 5 * 2 = 13 (乘法首先进行)。\n\nLeft to Right Mode:\n计算从左到右进行，不考虑运算符优先级。\n例如：3 + 5 * 2 = 16（计算从左到右进行）。"
-msgstr "标准模式：\n计算遵循标准的数学运算符优先级规则（PEMDAS）。\n例如：3 + 5 * 2 = 13（乘法首先进行）。\n\n从左到右模式：\n计算从左到右进行，不考虑运算符优先级。\n例如：3 + 5 * 2 = 16（计算从左到右进行）。"
+msgstr "错误！请检查输入"
